Fix the scrolling on Mobile touch

--- a/client/src/components/Shared/Modals/AddAddressMobile/style.css
+++ b/client/src/components/Shared/Modals/AddAddressMobile/style.css
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100%;
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 .add-address-modal-mobile__header {
   box-shadow: 0px 4px 4px rgba(204, 204, 204, 0.25);
